nullaway_error_a94b6d71-6113-4fbd-8977-7cb0e1ee6eb4.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/attributes/AttributeModifier.java:125: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return null;
    ^
    (see http://t.uber.com/nullaway )
